AI模块进入购物车跑通，浏览记录并没有通，ultra需要修改密码